# LMicp

./: .gitignore  CMakeLists.txt  LMicp.cpp  LMicp.h  README.md  main.cpp
data/: rotation.h
data/curr/: 1551690896.751801000.pcd
